FindBugs: Call Boolean.valueOf() instead of new Boolean().